chore: changed label id's according to the field

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -10,7 +10,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Do you think you are suffering from abuse?</label>
+                        <label for="SufferingFromAbuseLookupId">Do you think you are suffering from abuse?</label>
                         <ng-select [options]="sufferingFromAbuseLookupIdLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['SufferingFromAbuseLookupId']"
@@ -19,12 +19,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If no, please specify</label>
+                        <label for="SufferingFromAbuseDesc">If no, please specify</label>
                         <input [formControl]="caseAbuseForm.controls['SufferingFromAbuseDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, how do you feel about the abuse?</label>
+                        <label for="FeelAboutAbuseLookupId">If yes, how do you feel about the abuse?</label>
                         <ss-multiselect-dropdown [options]="feelAboutAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['FeelAboutAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.FeelAboutAbuseLookupArray">
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">How do your parents feel about the abuse?</label>
+                        <label for="ParentsFeelAboutAbuseLookupId">How do your parents feel about the abuse?</label>
                         <ss-multiselect-dropdown [options]="farentsFeelAboutAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['ParentsFeelAboutAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.ParentsFeelAboutAbuseLookupArray">
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">How do your in laws feel about the abuse?</label>
+                        <label for="LawFeelAboutAbuseLookupId">How do your in laws feel about the abuse?</label>
                         <ss-multiselect-dropdown [options]="lawFeelAboutAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['LawFeelAboutAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.LawFeelAboutAbuseLookupArray">
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Are there any signs of physical abuse? </label>
+                        <label for="SignsOfPhysicalAbuseLookupId">Are there any signs of physical abuse? </label>
                         <ng-select [options]="signsOfPhysicalAbuseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['SignsOfPhysicalAbuseLookupId']"
@@ -60,12 +60,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, Please specify</label>
+                        <label for="SignsOfPhysicalAbuseDesc">If yes, Please specify</label>
                         <input [formControl]="caseAbuseForm.controls['SignsOfPhysicalAbuseDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Weapons used by abuser on victim</label>
+                        <label for="WeaponsUsedLookupId">Weapons used by abuser on victim</label>
                         <ss-multiselect-dropdown [options]="weaponsUsedLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['WeaponsUsedLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.WeaponsUsedLookupArray">
@@ -73,7 +73,7 @@
                         </ss-multiselect-dropdown>
                     </div>
                     <div class="form-group">
-                        <label for="CenterId">If others, Please specify</label>
+                        <label for="WeaponsUsedDesc">If others, Please specify</label>
                         <input [formControl]="caseAbuseForm.controls['WeaponsUsedDesc']" class="form-control" />
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card-block">
                     <div class="form-group">
-                        <label for="CenterId">Types of physical abuse - tick all applicable situations</label>
+                        <label for="TypesOfPhyscialAbuseLookupId">Types of physical abuse - tick all applicable situations</label>
                         <ss-multiselect-dropdown [options]="typesOfPhyscialAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['TypesOfPhyscialAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.TypesOfPhyscialAbuseLookupArray">
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Frequency of physical abuse</label>
+                        <label for="FrequencyOfPhyscialAbuseLookupId">Frequency of physical abuse</label>
                         <ng-select [options]="frequencyOfPhyscialAbuseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['FrequencyOfPhyscialAbuseLookupId']"
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Number of years physical abuse has been occuring</label>
+                        <label for="NumberOfYearsOfPhyscialAbuse">Number of years physical abuse has been occuring</label>
                         <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].touched">
                             <input type="number" id="NumberOfYearsOfPhyscialAbuse" [formControl]="caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse']" class="form-control" />
                             <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfPhyscialAbuse'].invalid">
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Types of emotional abuse - tick all applicable situations</label>
+                        <label for="TypesOfEmotionalAbuseLookupId">Types of emotional abuse - tick all applicable situations</label>
                         <ss-multiselect-dropdown [options]="typesOfEmotionalAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['TypesOfEmotionalAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.TypesOfEmotionalAbuseLookupArray">
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Frequency of emotional abuse</label>
+                        <label for="FrequencyOfEmotionalAbuseLookupId">Frequency of emotional abuse</label>
                         <ng-select [options]="frequencyOfEmotionalAbuseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['FrequencyOfEmotionalAbuseLookupId']"
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Number of years emotional abuse has been occurring</label>
+                        <label for="NumberOfYearsOfEmotionalAbuse">Number of years emotional abuse has been occurring</label>
                         <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].touched">
                             <input type="number" id="NumberOfYearsOfEmotionalAbuse" [formControl]="caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse']" class="form-control" />
                             <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfEmotionalAbuse'].invalid">
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Types of sexual abuse - tick all applicable situations</label>
+                        <label for="TypesOfSexualAbuseLookupId">Types of sexual abuse - tick all applicable situations</label>
                         <ss-multiselect-dropdown [options]="typesOfSexualAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['TypesOfSexualAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.TypesOfSexualAbuseLookupArray">
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Frequency of sexual abuse</label>
+                        <label for="FrequencyOfSexualAbuseLookupId">Frequency of sexual abuse</label>
                         <ng-select [options]="frequencyOfSexualAbuseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['FrequencyOfSexualAbuseLookupId']"
@@ -165,7 +165,7 @@
 
 
                     <div class="form-group">
-                        <label for="CenterId">Number of years sexual abuse has been occurring</label>
+                        <label for="NumberOfYearsOfSexualAbuse">Number of years sexual abuse has been occurring</label>
                         <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].touched">
                             <input type="number" id="NumberOfYearsOfSexualAbuse" [formControl]="caseAbuseForm.controls['NumberOfYearsOfSexualAbuse']" class="form-control" />
                             <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfSexualAbuse'].invalid">
@@ -185,7 +185,7 @@
 
                 <div class="card-block">
                     <div class="form-group">
-                        <label for="CenterId">Types of economic abuse - tick all applicable situations</label>
+                        <label for="TypesOfEconomicAbuseLookupId">Types of economic abuse - tick all applicable situations</label>
                         <ss-multiselect-dropdown [options]="typesOfEconomicAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['TypesOfEconomicAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.TypesOfEconomicAbuseLookupArray">
@@ -194,7 +194,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Frequency of economic abuse</label>
+                        <label for="FrequencyOfEconomicAbuseLookupId">Frequency of economic abuse</label>
                         <ng-select [options]="frequencyOfEconomicAbuseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseAbuseForm.controls['FrequencyOfEconomicAbuseLookupId']"
@@ -203,7 +203,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Number of years economic abuse has been occurring</label>
+                        <label for="NumberOfYearsOfEconomicAbuse">Number of years economic abuse has been occurring</label>
                         <div class="form-group" [class.has-danger]="caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].invalid && caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].touched">
                             <input type="number" id="NumberOfYearsOfEconomicAbuse" [formControl]="caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse']" class="form-control" />
                             <small *ngIf="caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].touched && caseAbuseForm.controls['NumberOfYearsOfEconomicAbuse'].invalid">
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Reasons for abuse from abuser side</label>
+                        <label for="ReasonsForAbuseLookupId">Reasons for abuse from abuser side</label>
                         <ss-multiselect-dropdown [options]="reasonsForAbuseLookupOptionsList"
                                                  [formControl]="caseAbuseForm.controls['ReasonsForAbuseLookupId']"
                                                  [(ngModel)]="caseBook.Abuse.ReasonsForAbuseLookupArray">
@@ -222,7 +222,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If other, please specify</label>
+                        <label for="ReasonForAbuseDesc">If other, please specify</label>
                         <input [formControl]="caseAbuseForm.controls['ReasonForAbuseDesc']" class="form-control" />
                     </div>
 
