--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -9,7 +9,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Any children deceased/miscarried/aborted?</label>
+                        <label for="ChildrenDeceasedLookupId">Any children deceased/miscarried/aborted?</label>
                         <ss-multiselect-dropdown [options]="childrenDeceasedLookupOptionsList"
                                                  [formControl]="clientAndHouseholdForm.controls['ChildrenDeceasedLookupId']"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.ChildrenDeceasedLookupArray">
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Household income</label>
+                        <label for="HouseHoldIncomeLookupId">Household income</label>
                         <ng-select [options]="incomeLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['HouseHoldIncomeLookupId']"
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Have you sought help for your issues before coming to My Choices?</label>
+                        <label for="SoughtHelpYesNoLookupId">Have you sought help for your issues before coming to My Choices?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['SoughtHelpYesNoLookupId']"
@@ -36,17 +36,17 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">yes, specify</label>
+                        <label for="SoughtHelpDesc">yes, specify</label>
                         <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, what was the outcome of that help?</label>
+                        <label for="SoughtHelpOutPut">If yes, what was the outcome of that help?</label>
                         <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpOutPut']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If you would like Operation Peacemaker to assist you with your current domestic violence situation, please select the services you would make use of</label>
+                        <label for="PeacemakerAssistanceLookupId">If you would like Operation Peacemaker to assist you with your current domestic violence situation, please select the services you would make use of</label>
                         <ss-multiselect-dropdown [options]="peacemakerAssistanceOptionsList"
                                                  [formControl]="clientAndHouseholdForm.controls['PeacemakerAssistanceLookupId']"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.PeacemakerAssistanceLookupArray">
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If other, please specify</label>
+                        <label for="PeacemakerAssistanceDesc">If other, please specify</label>
                         <input [formControl]="clientAndHouseholdForm.controls['PeacemakerAssistanceDesc']" class="form-control" />
                     </div>
 
@@ -71,7 +71,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Would you like a Peacemaker to do follow up with you?</label>
+                        <label for="PeacemakerFollowupYesNoLookupId">Would you like a Peacemaker to do follow up with you?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['PeacemakerFollowupYesNoLookupId']"
@@ -80,7 +80,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Did the client sign the registration form?</label>
+                        <label for="ClientSignedRegistrationFormYesNoLookupId">Did the client sign the registration form?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['ClientSignedRegistrationFormYesNoLookupId']"
@@ -90,7 +90,7 @@
 
                     <div class="form-group">
                         <div class="form-group" [class.has-danger]="clientAndHouseholdForm.controls['ClientEmailId'].invalid && clientAndHouseholdForm.controls['ClientEmailId'].touched">
-                            <label for="PeaceMakerId">Client's Email</label>
+                            <label for="ClientEmailId">Client's Email</label>
                             <input type="email" id="ClientEmailId" [formControl]="clientAndHouseholdForm.controls['ClientEmailId']" inputmode="email" class="form-control" />
                             <small *ngIf="clientAndHouseholdForm.controls['ClientEmailId'].dirty && clientAndHouseholdForm.controls['ClientEmailId'].invalid">
                                 Please provide a valid email
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Religion</label>
+                        <label for="ReligionLookupId">Religion</label>
                         <ng-select [options]="religionOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['ReligionLookupId']"
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Level of education</label>
+                        <label for="LevelOfEducationLookupId">Level of education</label>
                         <ng-select [options]="levelOfEducationOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['LevelOfEducationLookupId']"
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Vocational skills</label>
+                        <label for="VocationalSkillsLookupId">Vocational skills</label>
                         <ng-select [options]="vocationalSkillsOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['VocationalSkillsLookupId']"
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">If other Vocational skills, please specify:</label>
+                        <label for="VocationalSkillsDesc">If other Vocational skills, please specify:</label>
                         <input [formControl]="clientAndHouseholdForm.controls['VocationalSkillsDesc']" class="form-control" />
                     </div>
 
@@ -143,7 +143,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Occupation</label>
+                        <label for="OccupationLookupId">Occupation</label>
                         <ng-select [options]="occupationOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['OccupationLookupId']"
@@ -152,12 +152,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">If self-employed or employed, please specify:</label>
+                        <label for="OccupationDesc">If self-employed or employed, please specify:</label>
                         <input [formControl]="clientAndHouseholdForm.controls['OccupationDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Client Income</label>
+                        <label for="ClientIncomeLookupId">Client Income</label>
                         <ng-select [options]="incomeLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="clientAndHouseholdForm.controls['ClientIncomeLookupId']"
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Household members living in same house</label>
+                        <label for="HouseHoldMembersLivingLookupId">Household members living in same house</label>
                         <ss-multiselect-dropdown [options]="householdMembersOptionsList"
                                                  [formControl]="clientAndHouseholdForm.controls['HouseHoldMembersLivingLookupId']"
                                                  [(ngModel)]="caseBook.FamilyHouseHold.HouseHoldMembersLivingLookupArray">
@@ -174,7 +174,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Year of marriage</label>
+                        <label for="YearOfMarriage">Year of marriage</label>
                         <input [formControl]="clientAndHouseholdForm.controls['YearOfMarriage']" digits maxlength="4" class="form-control" />
                         <small *ngIf="clientAndHouseholdForm.controls['YearOfMarriage'].dirty && clientAndHouseholdForm.controls['YearOfMarriage'].invalid">
                             Please provide a valid year
@@ -182,7 +182,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">At what age did client have her first child?</label>
+                        <label for="ClientAgeAtFirstChild">At what age did client have her first child?</label>
                         <input [formControl]="clientAndHouseholdForm.controls['ClientAgeAtFirstChild']" digits maxlength="2" class="form-control" />
                         <small *ngIf="clientAndHouseholdForm.controls['ClientAgeAtFirstChild'].dirty && clientAndHouseholdForm.controls['ClientAgeAtFirstChild'].invalid">
                             Please provide a valid age
