--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/legal_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/legal_case.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="caseLegalForm" *ngIf="isLegalDataLoaded">
+<form [formGroup]="caseLegalForm">
     <div class="row">
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
@@ -7,27 +7,27 @@
                 </div>
                 <div class="card-block">
                     <div class="form-group">
-                        <label for="PeaceMakerId">Case Number as per court</label>
+                        <label for="CaseNumber">Case Number as per court</label>
                         <input [formControl]="caseLegalForm.controls['CaseNumber']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Court</label>
+                        <label for="Court">Court</label>
                         <input [formControl]="caseLegalForm.controls['Court']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Prayer</label>
+                        <label for="Prayer">Prayer</label>
                         <input [formControl]="caseLegalForm.controls['Prayer']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Name of legal representative</label>
+                        <label for="LegalRepresentative">Name of legal representative</label>
                         <input [formControl]="caseLegalForm.controls['LegalRepresentative']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Has the legal consent form been signed and submitted?</label>
+                        <label for="LegalConsentFormLookupId">Has the legal consent form been signed and submitted?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseLegalForm.controls['LegalConsentFormLookupId']"
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Has any legal action been taken by the client in this regard prior to approaching OPM for help?</label>
+                        <label for="LegalActionLookupId">Has any legal action been taken by the client in this regard prior to approaching OPM for help?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="caseLegalForm.controls['LegalActionLookupId']"
@@ -54,7 +54,7 @@
                 </div>
                 <div class="card-block">
                     <div class="form-group">
-                        <label for="CenterId">Outcome</label>
+                        <label for="OutcomeLookupId">Outcome</label>
                         <ss-multiselect-dropdown [options]="outcomeLookupOptionList"
                                                  [formControl]="caseLegalForm.controls['OutcomeLookupId']"
                                                  [(ngModel)]="caseBook.Legal.OutcomeLookupArray">
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">List all documents that the client has submitted</label>
+                        <label for="DocumentsLookupId">List all documents that the client has submitted</label>
                         <ss-multiselect-dropdown [options]="documentsLookupOptionList"
                                                  [formControl]="caseLegalForm.controls['DocumentsLookupId']"
                                                  [(ngModel)]="caseBook.Legal.DocumentsLookupArray">
