--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/manage_case.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="caseManageForm" *ngIf="isManageDataLoaded">
+<form [formGroup]="caseManageForm">
     <div class="row">
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
@@ -8,7 +8,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Status</label>
+                        <label for="CaseStatusId">Status</label>
                         <ng-select [options]="caseStatusOptionList"
                                    placeholder="Select"
                                    [formControl]="caseManageForm.controls['CaseStatusId']"
@@ -17,12 +17,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">If Referred, please specify referred to whom</label>
+                        <label for="ReferredToWhom">If Referred, please specify referred to whom</label>
                         <input [formControl]="caseManageForm.controls['ReferredToWhom']" class="form-control" maxlength="2000" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Source of case</label>
+                        <label for="SourceOfCaseLookupId">Source of case</label>
                         <ng-select [options]="sourceOfCaseLookupOptionList"
                                    placeholder="Select"
                                    [formControl]="caseManageForm.controls['SourceOfCaseLookupId']"
@@ -31,12 +31,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">If other, please specify</label>
+                        <label for="SourceOfCaseDesc">If other, please specify</label>
                         <input [formControl]="caseManageForm.controls['SourceOfCaseDesc']" class="form-control" maxlength="2000" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Type of counseling</label>
+                        <label for="TypesOfCounselingLookupId">Type of counseling</label>
                         <ss-multiselect-dropdown [options]="typesOfCounselingLookupOptionList"
                                                  [formControl]="caseManageForm.controls['TypesOfCounselingLookupId']"
                                                  [(ngModel)]="caseBook.Manage.TypesOfCounselingLookupArray">
@@ -45,7 +45,7 @@
 
                     <div class="form-group">
                         <div class="form-group" [class.has-danger]="caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid && caseManageForm.controls['TotalNoOfSessionsLookupId'].touched">
-                            <label for="CenterId">Total no of sessions</label>
+                            <label for="TotalNoOfSessionsLookupId">Total no of sessions</label>
                             <input type="number" id="TotalNoOfSessionsLookupId" [formControl]="caseManageForm.controls['TotalNoOfSessionsLookupId']" class="form-control" />
                             <small *ngIf="caseManageForm.controls['TotalNoOfSessionsLookupId'].touched && caseManageForm.controls['TotalNoOfSessionsLookupId'].invalid">
                                 Value should be between 0 & 99 And Non-Fractional.
@@ -55,7 +55,7 @@
 
                     <div class="form-group">
                         <div class="form-group" [class.has-danger]="caseManageForm.controls['TotalHoursSpentLookupId'].invalid && caseManageForm.controls['TotalHoursSpentLookupId'].touched">
-                            <label for="CenterId">Total hours spent</label>
+                            <label for="TotalHoursSpentLookupId">Total hours spent</label>
                             <input type="number" id="TotalHoursSpentLookupId" [formControl]="caseManageForm.controls['TotalHoursSpentLookupId']" class="form-control" />
                             <small *ngIf="caseManageForm.controls['TotalHoursSpentLookupId'].touched && caseManageForm.controls['TotalHoursSpentLookupId'].invalid">
                                 Value should be between 0 & 99 And two digit precision.
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Reason for selected Closure status</label>
+                        <label for="ReasonForClosureStatus">Reason for selected Closure status</label>
                         <input [formControl]="caseManageForm.controls['ReasonForClosureStatus']" class="form-control" maxlength="2000" />
                     </div>
 
@@ -82,17 +82,17 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Subject</label>
+                        <label for="CaseSubject">Subject</label>
                         <input [formControl]="caseManageForm.controls['CaseSubject']" class="form-control" maxlength="2000" />
                     </div>
 
                     <div class="form-group">
-                        <label for="PeaceMakerId">Description</label>
+                        <label for="CaseDescription">Description</label>
                         <textarea [formControl]="caseManageForm.controls['CaseDescription']" class="form-control" maxlength="2000"></textarea>
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Relationship with PM</label>
+                        <label for="RelationshipWithPMLookupId">Relationship with PM</label>
                         <ng-select [options]="relationshipWithPMLookupOptionList"
                                    placeholder="Select"
                                    [formControl]="caseManageForm.controls['RelationshipWithPMLookupId']"
@@ -101,7 +101,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Case resolution log</label>
+                        <label for="ResolutionLog">Case resolution log</label>
                         <input [formControl]="caseManageForm.controls['ResolutionLog']" class="form-control" maxlength="2000" />
                     </div>
 
