--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="caseBook">
+<div class="row">
     <div class="d-flex flex-column fill-width">
         <div class="add-new-button-container">
             <button class="btn btn-primary" (click)="addNewChild()">Add New Children &nbsp;<i class="fa fa-plus"></i></button>
@@ -50,7 +50,7 @@
                                 <div class="card-block">
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Name *</label>
+                                        <label for="Name">Name *</label>
                                         <textarea placeholder="Name" [formControl]="caseChildrenForm.controls['Name']" class="form-control"></textarea>
                                         <div>
                                             <small *ngIf="caseChildrenForm.controls['Name'].hasError('required') && caseChildrenForm.controls['Name'].touched" class="mat-text-warn">Name is required.</small>
@@ -58,7 +58,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Age *</label>
+                                        <label for="Age">Age *</label>
                                         <div class="form-group" [class.has-danger]="caseChildrenForm.controls['Age'].invalid && caseChildrenForm.controls['Age'].touched">
                                             <input type="number" id="Age" [formControl]="caseChildrenForm.controls['Age']" class="form-control" />
                                             <small *ngIf="caseChildrenForm.controls['Age'].touched && caseChildrenForm.controls['Age'].invalid">
@@ -68,7 +68,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Gender *</label>
+                                        <label for="GenderLookupId">Gender *</label>
                                         <ng-select [options]="genderLookupOptionsList"
                                                    placeholder="Select Gender"
                                                    [formControl]="caseChildrenForm.controls['GenderLookupId']"
@@ -80,14 +80,14 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Relationship With Abuser *</label>
+                                        <label for="RelationshipWithAbuserLookupId">Relationship With Abuser *</label>
                                         <ng-select [options]="relationshipWithAbuserLookupOptionsList"
                                                    placeholder="Select Relationship"
                                                    [formControl]="caseChildrenForm.controls['RelationshipWithAbuserLookupId']"
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
-                                            <small *ngIf="caseChildrenForm.controls['RelationshipWithAbuserLookupId'].hasError('required') && caseChildrenForm.controls['RelationshipWithAbuserLookupId'].touched" class="mat-text-warn">Relation is required.</small>
+                                            <small *ngIf="caseChildrenForm.controls['RelationshipWithAbuserLookupId'].hasError('required') && caseChildrenForm.controls['RelationshipWithAbuserLookupId'].touched" class="mat-text-warn">Relationship With Abuser is required.</small>
                                         </div>
                                     </div>
 
