--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
@@ -81,7 +81,7 @@
                                 <div class="card-block">
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Dress</label>
+                                        <label for="MentalDressLookupId">Dress</label>
                                         <ss-multiselect-dropdown [options]="MentalDressLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalDressLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalDressLookupArray">
@@ -89,7 +89,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Hygiene</label>
+                                        <label for="MentalHygieneLookupId">Hygiene</label>
                                         <ss-multiselect-dropdown [options]="MentalHygieneLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalHygieneLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalHygieneLookupArray">
@@ -97,7 +97,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Body Type</label>
+                                        <label for="MentalBodyTypeLookupId">Body Type</label>
                                         <ss-multiselect-dropdown [options]="MentalBodyTypeLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalBodyTypeLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalBodyTypeLookupArray">
@@ -105,7 +105,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Expression</label>
+                                        <label for="MentalExpressionLookupId">Expression</label>
                                         <ss-multiselect-dropdown [options]="MentalExpressionLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalExpressionLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalExpressionLookupArray">
@@ -113,7 +113,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Motor Activity</label>
+                                        <label for="MentalMotorActivityLookupId">Motor Activity</label>
                                         <ss-multiselect-dropdown [options]="MentalMotorActivityLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalMotorActivityLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalMotorActivityLookupArray">
@@ -121,14 +121,14 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Vocabulary</label>
+                                        <label for="MentalVocabularyLookupId">Vocabulary</label>
                                         <ss-multiselect-dropdown [options]="MentalVocabularyLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalVocabularyLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalVocabularyLookupArray">
                                         </ss-multiselect-dropdown>
                                     </div>
 
-                                    <label for="PeacemakerId">Impulse Control</label>
+                                    <label for="MentalImpulseControlLookupId">Impulse Control</label>
                                     <ss-multiselect-dropdown [options]="MentalImpulseControlLookupOptionList"
                                                              [formControl]="caseMentalForm.controls['MentalImpulseControlLookupId']"
                                                              [(ngModel)]="caseBook.SelectedMental.MentalImpulseControlLookupArray">
@@ -145,7 +145,7 @@
                                 <div class="card-block">
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Speech</label>
+                                        <label for="MentalSpeechLookupId">Speech</label>
                                         <ss-multiselect-dropdown [options]="MentalSpeechLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalSpeechLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalSpeechLookupArray">
@@ -153,7 +153,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Behaviour</label>
+                                        <label for="MentalBehaviourLookupId">Behaviour</label>
                                         <ss-multiselect-dropdown [options]="MentalBehaviourLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalBehaviourLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalBehaviourLookupArray">
@@ -161,7 +161,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Content</label>
+                                        <label for="MentalContentLookupId">Content</label>
                                         <ss-multiselect-dropdown [options]="MentalContentLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalContentLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalContentLookupArray">
@@ -169,7 +169,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Flow Of Thought</label>
+                                        <label for="MentalFlowOfThoughtLookupId">Flow Of Thought</label>
                                         <ss-multiselect-dropdown [options]="MentalFlowOfThoughtLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalFlowOfThoughtLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalFlowOfThoughtLookupArray">
@@ -177,7 +177,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Orientation</label>
+                                        <label for="MentalOrientationLookupId">Orientation</label>
                                         <ss-multiselect-dropdown [options]="MentalOrientationLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalOrientationLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalOrientationLookupArray">
@@ -185,7 +185,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Estimated Intellect</label>
+                                        <label for="MentalEstimatedIntellectLookupId">Estimated Intellect</label>
                                         <ss-multiselect-dropdown [options]="MentalEstimatedIntellectLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalEstimatedIntellectLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalEstimatedIntellectLookupArray">
@@ -193,7 +193,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Attention</label>
+                                        <label for="MentalAttentionLookupId">Attention</label>
                                         <ss-multiselect-dropdown [options]="MentalAttentionLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalAttentionLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalAttentionLookupArray">
@@ -211,7 +211,7 @@
                                 <div class="card-block">
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Insight</label>
+                                        <label for="MentalInsightLookupId">Insight</label>
                                         <ss-multiselect-dropdown [options]="MentalInsightLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalInsightLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalInsightLookupArray">
@@ -219,7 +219,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Judgement</label>
+                                        <label for="MentalJudgementLookupId">Judgement</label>
                                         <ss-multiselect-dropdown [options]="MentalJudgementLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalJudgementLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalJudgementLookupArray">
@@ -227,7 +227,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Memory</label>
+                                        <label for="MentalMemoryLookupId">Memory</label>
                                         <ss-multiselect-dropdown [options]="MentalMemoryLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalMemoryLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalMemoryLookupArray">
@@ -235,7 +235,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Information</label>
+                                        <label for="MentalInformationLookupId">Information</label>
                                         <ss-multiselect-dropdown [options]="MentalInformationLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalInformationLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalInformationLookupArray">
@@ -243,7 +243,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Abstraction</label>
+                                        <label for="MentalAbstractionLookupId">Abstraction</label>
                                         <ss-multiselect-dropdown [options]="MentalAbstractionLookupOptionList"
                                                                  [formControl]="caseMentalForm.controls['MentalAbstractionLookupId']"
                                                                  [(ngModel)]="caseBook.SelectedMental.MentalAbstractionLookupArray">
