--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/offender_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/offender_case.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="caseBook">
+<div class="row">
     <div class="d-flex flex-column fill-width">
         <div class="add-new-button-container">
             <button class="btn btn-primary" (click)="addNewOffender()">Add New Offender &nbsp;<i class="fa fa-plus"></i></button>
@@ -52,7 +52,7 @@
                                 <div class="card-block">
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Name *</label>
+                                        <label for="Name">Name *</label>
                                         <textarea placeholder="Name" [formControl]="caseOffenderForm.controls['Name']" class="form-control"></textarea>
                                         <div>
                                             <small *ngIf="caseOffenderForm.controls['Name'].hasError('required') && caseOffenderForm.controls['Name'].touched" class="mat-text-warn">Name is required.</small>
@@ -60,7 +60,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Age *</label>
+                                        <label for="Age">Age *</label>
                                         <div class="form-group" [class.has-danger]="caseOffenderForm.controls['Age'].invalid && caseOffenderForm.controls['Age'].touched">
                                             <input type="number" id="Age" [formControl]="caseOffenderForm.controls['Age']" class="form-control" />
                                             <small *ngIf="caseOffenderForm.controls['Age'].touched && caseOffenderForm.controls['Age'].invalid">
@@ -70,7 +70,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Gender *</label>
+                                        <label for="GenderLookupId">Gender *</label>
                                         <ng-select [options]="genderLookupOptionsList"
                                                    placeholder="Select Gender"
                                                    [formControl]="caseOffenderForm.controls['GenderLookupId']"
@@ -82,19 +82,19 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">Relationship With Victim *</label>
+                                        <label for="RelationshipWithVictimLookupId">Relationship With Victim *</label>
                                         <ng-select [options]="relationshipWithVictimLookupOptionsList"
                                                    placeholder="Select Relationship"
                                                    [formControl]="caseOffenderForm.controls['RelationshipWithVictimLookupId']"
                                                    [allowClear]="true">
                                         </ng-select>
                                         <div>
-                                            <small *ngIf="caseOffenderForm.controls['RelationshipWithVictimLookupId'].hasError('required') && caseOffenderForm.controls['RelationshipWithVictimLookupId'].touched" class="mat-text-warn">Relation is required.</small>
+                                            <small *ngIf="caseOffenderForm.controls['RelationshipWithVictimLookupId'].hasError('required') && caseOffenderForm.controls['RelationshipWithVictimLookupId'].touched" class="mat-text-warn">Relationship With Victim is required.</small>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="PeacemakerId">If other, please specify</label>
+                                        <label for="OtherRelationship">If other, please specify</label>
                                         <textarea placeholder="Other Relationship" [formControl]="caseOffenderForm.controls['OtherRelationship']" class="form-control"></textarea>
 
                                     </div>
