--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="physicalHealthForm" *ngIf="isPhysicalHealthDataLoaded">
+<form [formGroup]="physicalHealthForm">
     <div class="row">
         <div class="col-md-6 d-flex flex-column">
             <div class="card">
@@ -8,7 +8,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Are you suffering from any major illness?</label>
+                        <label for="SufferingFromAnyMajorIllnessLookupId">Are you suffering from any major illness?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['SufferingFromAnyMajorIllnessLookupId']"
@@ -17,12 +17,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, please specify:?</label>
+                        <label for="SufferingFromAnyMajorIllnessDesc">If yes, please specify:?</label>
                         <input [formControl]="physicalHealthForm.controls['SufferingFromAnyMajorIllnessDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Do you have any diagnosed psychiatric illness?</label>
+                        <label for="DiagnosedPsychiatricIllnessLookupId">Do you have any diagnosed psychiatric illness?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['DiagnosedPsychiatricIllnessLookupId']"
@@ -31,12 +31,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, please specify:?</label>
+                        <label for="DiagnosedPsychiatricIllnessDesc">If yes, please specify:?</label>
                         <input [formControl]="physicalHealthForm.controls['DiagnosedPsychiatricIllnessDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">How much do you sleep per night?</label>
+                        <label for="SleepPerNightLookupId">How much do you sleep per night?</label>
                         <ng-select [options]="sleepPerNightLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['SleepPerNightLookupId']"
@@ -46,7 +46,7 @@
 
 
                     <div class="form-group">
-                        <label for="CenterId">How is your appetite?</label>
+                        <label for="AppetiteLookupId">How is your appetite?</label>
                         <ng-select [options]="appetiteLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['AppetiteLookupId']"
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Do you exercise?</label>
+                        <label for="ExerciseLookupId">Do you exercise?</label>
                         <ng-select [options]="exerciseLookupOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['ExerciseLookupId']"
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Are you on any medication?</label>
+                        <label for="AnyMedicationLookupId">Are you on any medication?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['AnyMedicationLookupId']"
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, what medication:?</label>
+                        <label for="AnyMedicationDesc">If yes, what medication:?</label>
                         <input [formControl]="physicalHealthForm.controls['AnyMedicationDesc']" class="form-control" />
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="card-block">
 
                     <div class="form-group">
-                        <label for="CenterId">Are you on any substance?</label>
+                        <label for="AnySubstanceLookupId">Are you on any substance?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['AnySubstanceLookupId']"
@@ -97,12 +97,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Please specify:</label>
+                        <label for="AnySubstanceDesc">Please specify:</label>
                         <input [formControl]="physicalHealthForm.controls['AnySubstanceDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Are you currently pregnant?</label>
+                        <label for="CurrentlyPregnantLookup">Are you currently pregnant?</label>
                         <ng-select [options]="yesNoOptionsList"
                                    placeholder="Select"
                                    [formControl]="physicalHealthForm.controls['CurrentlyPregnantLookup']"
@@ -111,12 +111,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If yes, give details:</label>
+                        <label for="CurrentlyPregnantDesc">If yes, give details:</label>
                         <input [formControl]="physicalHealthForm.controls['CurrentlyPregnantDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">What is the reason for seeking help?</label>
+                        <label for="ReasonForSeekingHelpLookupId">What is the reason for seeking help?</label>
                         <ss-multiselect-dropdown [options]="reasonForSeekingHelpLookupOptionsList"
                                                  [formControl]="physicalHealthForm.controls['ReasonForSeekingHelpLookupId']"
                                                  [(ngModel)]="caseBook.PhysicalHealth.ReasonForSeekingHelpLookupArray">
@@ -124,12 +124,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If other, please specify</label>
+                        <label for="ReasonForSeekingHelpDesc">If other, please specify</label>
                         <input [formControl]="physicalHealthForm.controls['ReasonForSeekingHelpDesc']" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">Who is abusing you?</label>
+                        <label for="WhoIsAbusingYouLookupId">Who is abusing you?</label>
                         <ss-multiselect-dropdown [options]="whoIsAbusingYouLookupOptionsList"
                                                  [formControl]="physicalHealthForm.controls['WhoIsAbusingYouLookupId']"
                                                  [(ngModel)]="caseBook.PhysicalHealth.WhoIsAbusingYouLookupArray">
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="CenterId">If others, please specify </label>
+                        <label for="WhoIsAbusingYouDesc">If others, please specify </label>
                         <input [formControl]="physicalHealthForm.controls['WhoIsAbusingYouDesc']" class="form-control" />
                     </div>
 
